--- a/repominggu6/websiteku/kontak.html
+++ b/repominggu6/websiteku/kontak.html
@@ -13,6 +13,7 @@
             <a href="cv-name.pdf">Download CV</a> | 
             <a href="kontak.html">Contact</a> | 
             <a href="tentang.html">About me</a>
+            <a href="biodata.html">Biodata Saya</a> |
         </nav>
         <hr />
         <div>]
