--- a/repominggu6/websiteku/index.html
+++ b/repominggu6/websiteku/index.html
@@ -11,9 +11,10 @@
 <body>
         <nav>
             <a href="index.html">Home</a> |
-            <a href="cv-name.pdf">Download CV</a>
-            <a href="kontak.html">Contact</a>
-            <a href="tentang.html">About me</a>
+            <a href="cv-name.pdf">Download CV</a> |
+            <a href="kontak.html">Contact</a> |
+            <a href="tentang.html">About me</a> |
+            <a href="biodata.html">Biodata Saya</a> |
         </nav>
         <hr />
                 <header style="text-align: center;">
