--- a/repominggu6/websiteku/tentang.html
+++ b/repominggu6/websiteku/tentang.html
@@ -14,6 +14,7 @@
         <a href="cv-name.pdf">Download CV</a> |
         <a href="kontak.html">Contact</a> |
         <a href="tentang.html">About me</a>
+        <a href="biodata.html">Biodata Saya</a> |
     </nav>
     
     <hr />
