--- a/repominggu6/websiteku/kontak.html
+++ b/repominggu6/websiteku/kontak.html
@@ -12,8 +12,9 @@
             <a href="index.html">Home</a> | 
             <a href="cv-name.pdf">Download CV</a> | 
             <a href="kontak.html">Contact</a> | 
-            <a href="tentang.html">About me</a>
+            <a href="tentang.html">About me</a> |
             <a href="biodata.html">Biodata Saya</a> |
+            <a href="Hasil Latihan.html">Hasil Latihan Saya</a> 
         </nav>
         <hr />
         <div>]
