--- a/repominggu6/websiteku/tentang.html
+++ b/repominggu6/websiteku/tentang.html
@@ -15,6 +15,7 @@
         <a href="kontak.html">Contact</a> |
         <a href="tentang.html">About me</a>
         <a href="biodata.html">Biodata Saya</a> |
+        <a href="Hasil Latihan.html">Hasil Latihan Saya</a> 
     </nav>
     
     <hr />
